<resources>
    <string name="app_name">RestoUniv</string>
    <string name="txt_bienvenu">Bienvenue</string>
    <string name="immage_logo">immage_logo</string>
    <string name="choizisez_votre_profil"><u>Choisissez votre profil SVP</u></string>
    <string name="photo_profil_etuduant">photo_profil_etuduant</string>
    <string name="photo_profil_staff">photo_profil_staff</string>
    <string name="logo_sans_cack">logo_sans_cack</string>
    <string name="staff"><u>Staff</u></string>
    <string name="etudiant"><u>Etudiant</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="valider_butt">Valider</string>
    <string name="se_connecter"><u>Se connecter</u></string>
    <string name="rester_connect">Rester connecté</string>
    <string name="connexion_button">Connexion</string>
    <string name="creer_un_compte">Créer un Compte</string>
    <string name="ou">----------------Ou----------------</string>
    <string name="android_version_v1_0"><u>Android Version v1.0</u></string>
    <string name="Identifiant" translatable="false">ID</string>
    <string name="Identifiant_staff" translatable="false">Indentifiant_staff</string>
    <string name="Id_staff" translatable="false">Identifiant_staff</string>
    <string name="s_inscrir"><u>S\'inscrir</u></string>
    <string name="sinscrir" translatable="false"><u>S \'inscrir</u></string>
    <string name="Valider_button" translatable="false">Valider</string>
    <string name="Nom" translatable="false">Nom</string>
    <string name="Pénom" translatable="false">Prénom</string>
    <string name="Id_Hébergement" translatable="false">N°de carte d\'hébergement</string>
    <string name="IdHébergement" translatable="false">N°de la carte d hébergement</string>
    <string name="Adresse_mail" translatable="false">Adresse Email</string>
    <string name="mot_de_passe" translatable="false">Mot de passe</string>
    <string name="dejeunner" translatable="false">Dejeunner :</string>
    <string name="d_crivez_votre_r_clamation" translatable="false">Décrivez votre réclamation...</string>

    <string name="telechargerCGU">
        <a href="https://firebasestorage.googleapis.com/v0/b/restouniv-514b0.appspot.com/o/CGU.pdf?alt=media&amp;token=0794e394-5675-410b-8fd3-24ba083fd7e1">Télecharger CGU</a>
    </string>


    <string-array name="plat">
        <item>Dinde</item>
        <item>Viande</item>
        <item>Poisson</item>
    </string-array>

    <string-array name="boissons">
        <item>Yagourt</item>
        <item>Jus d\'orange</item>
        <item>Jus d\'avocat</item>
    </string-array>

    <string-array name="dessert">
        <item>Bannan</item>
        <item>Pomme</item>
        <item>Orange</item>
    </string-array>

    <string-array name="dej_din">
        <item>Dejeunner</item>
        <item>Dinner</item>

    </string-array>

    <string-array name="Anomalies">
        <item>Hygiéne</item>
        <item>Qualité de service</item>
        <item>Comportement du personnel</item>
    </string-array>

    <string-array name="MM">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="YY">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="choisissez_le_type_de_repas" translatable="false">Choisissez le type de repas :</string>
    <string name="yy" translatable="false">yy</string>
    <string name="mm" translatable="false">mm</string>

    <string name="RestoUniv_est_une_compagnie_de_restauration_marocaine_cr_e_en_2021_sp_cialis_e_dans_le_domaine_de_la_restauration_universitaire_au_niveau_de_l_universit_sultan_moulay_slimane_de_la_r_gion_nb_ni_mellal_kh_nifra" translatable="false">RestoUniv V1.0 est une application de restauration marocaine fondée en 2021 specialisée dans le domaine de la restauration universitaire au niveau de l\'universitée Sultan Moulay Slimane dans la région de Béni-Mellal Khénifra</string>
    <string name="title_activity_menu_staff" translatable="false">ActivityMenuStaff</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_drawer_staff" translatable="false">DrawerStaffActivity</string>
    <string name="bienvenue_mr" translatable="false"><u>Bienvenue Mr</u></string>
    <string name="nom_et_prenom" translatable="false">Nom et Prenom</string>
    <string name="r_servation_compl_te_7_jours_compris_le_d_jeuner_et_le_diner" translatable="false"><u>Réservation complète</u>: 7 jours compris le déjeuner et le diner.</string>
    <string name="r_servation_personnalis_e_s_lectionnez_les_dates_et_les_repas_voulus" translatable="false"><u>Réservation personnalisée</u>: sélectionnez les dates et les repas voulus.</string>
    <string name="bonjour_monsieur" translatable="false"><u>Bonjour Monsieur</u></string>
    <string name="nom_prenom" translatable="false">Nom prenom</string>
</resources>