<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/capturefond"
    android:forceDarkAllowed="false"
    android:visibility="visible"
    tools:context=".Activity2choixProfil"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="302dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo_sans_cack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sans_back" />

    <TextView
        android:id="@+id/tx_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:alpha="1"
        android:text="@string/choizisez_votre_profil"
        android:textColor="#5E130D"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="194dp"
        android:layout_height="228dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:contentDescription="@string/photo_profil_staff"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profil1test" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="195dp"
        android:layout_height="230dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"

        android:contentDescription="@string/photo_profil_etuduant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profil2test" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/staff"
        android:textColor="#5E130D"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/etudiant"
        android:textColor="#5E130D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="182dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/arrondir"
        android:enabled="false"
        android:onClick="buttValider"
        android:text="@string/valider_butt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_profil"
        app:layout_constraintVertical_bias="0.915" />


</androidx.constraintlayout.widget.ConstraintLayout>