<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/capturefond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_login_etudiant">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="88dp"
        android:contentDescription="@string/logo_sans_cack"
        app:layout_constraintBottom_toTopOf="@+id/tx_profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/logo_sans_back" />

    <TextView
        android:id="@+id/tx_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:alpha="1"
        android:text="@string/se_connecter"
        android:textColor="#5E130D"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_etudiant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_etudiant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_etudiant"
        android:autofillHints="" />

    <!--
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_etudiant"
        app:layout_constraintStart_toStartOf="@+id/password_etudiant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
        -->
    <!--
    <Button
        android:id="@+id/cree_compte_button"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/arrondir"
        android:enabled="true"
        android:text="@string/creer_un_compte"
        android:onClick="buttInsciption"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent" />
    -->
    <Button
        android:id="@+id/Connexion_button_etudiant"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/arrondir"
        android:enabled="true"
        android:text="@string/connexion_button"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_etudiant"
        app:layout_constraintVertical_bias="0.224" />

    <CheckBox
        android:id="@+id/checkBox_etudiant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rester_connect"
        app:layout_constraintBottom_toTopOf="@+id/Connexion_button_etudiant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_etudiant"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_inscrir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/text_inscrir"
        android:textColor="#5E130D"
        android:textSize="15sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Connexion_button_etudiant"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/clique_inscrir_etudiant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clique_inscrir"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toEndOf="@+id/text_inscrir"
        app:layout_constraintTop_toBottomOf="@+id/Connexion_button_etudiant"
        app:layout_constraintVertical_bias="0.206" />

    <!--
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textColor="#5E130D"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cree_compte_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Connexion_button"
        app:layout_constraintVertical_bias="0.585" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>